fixed spacing

--- a/photography.css
+++ b/photography.css
@@ -188,6 +188,6 @@ div.desc {
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     margin-top: 1.2%;
-    padding-bottom: .1%;
+    padding-bottom: 2%;
 }
 /*end gear*/
